tests/diagnostics/expressions/match/arm_type_mismatch/expect.txt
# exit: 1
input/main.lang0:7:19: error: match arm type mismatch: expected int64, got string
          string => "nope"
                    ^
